--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,24 +8,21 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ProyectoFinGrado">
+        android:theme="@style/ThemeProyectoFinGrado">
         <activity
             android:name=".HomeActivity"
             android:exported="true" />
         <!-- Actividad de autentificación -->
         <activity
             android:name=".AuthActivity"
-            android:exported="true" /> <!-- Esta actividad solamente se ve en vertical. Está marcado con la propiedad: screenOrientation -->
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:screenOrientation="portrait">
+            android:theme="@style/SplashScreen"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+        </activity><!-- Esta actividad solamente se ve en vertical. Está marcado con la propiedad: screenOrientation -->
     </application>
 
 </manifest>
