--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,10 @@ dependencies {
 
     //Implementación para el servicio de autentificación de google
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
-    
+
+    //Implemento librería Volley para conexión a BBDD
+    implementation 'com.android.volley:volley:1.1.1'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
