Tabla calorica rellenada y título de la app modificado

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/ThemeProyectoFinGrado">
         <activity
+            android:name=".PresentationDomain.CaloricTable"
+            android:exported="true" />
+        <activity
             android:name=".PresentationDomain.SelectedFood"
             android:exported="true" />
         <activity
